WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90792
[CSSRegions]Assert failure when layout positioned objects in regions
https://bugs.webkit.org/show_bug.cgi?id=90792
Summary
[CSSRegions]Assert failure when layout positioned objects in regions
Mihnea Ovidenie
Reported
2012-07-09 08:18:23 PDT
When layout out-of-flow positioned objects in regions with different writing modes, the following assert inside RenderBlock::clampToStartAndEndRegions triggers: ASSERT(region && inRenderFlowThread()) The reason for the ASSERT is that in these cases, the region is 0.
Attachments
Patch
(10.60 KB, patch)
2012-07-09 11:00 PDT
,
Mihnea Ovidenie
no flags
Details
Formatted Diff
Diff
Patch for landing
(11.25 KB, patch)
2012-07-20 04:21 PDT
,
Mihnea Ovidenie
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mihnea Ovidenie
Comment 1
2012-07-09 11:00:31 PDT
Created
attachment 151282
[details]
Patch
Andreas Kling
Comment 2
2012-07-19 07:19:26 PDT
Comment on
attachment 151282
[details]
Patch r=me
Mihnea Ovidenie
Comment 3
2012-07-20 04:21:22 PDT
Created
attachment 153477
[details]
Patch for landing
WebKit Review Bot
Comment 4
2012-07-20 07:00:06 PDT
Comment on
attachment 153477
[details]
Patch for landing Clearing flags on attachment: 153477 Committed
r123211
: <
http://trac.webkit.org/changeset/123211
>
WebKit Review Bot
Comment 5
2012-07-20 07:00:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug