[CSSRegions]Assert failure when layout positioned objects in regions https://bugs.webkit.org/show_bug.cgi?id=90792

Reviewed by Andreas Kling.

Before clamping the containing block (for an out-of-flow positioned element
inside a named flow) to the region, we have to test whether the region is not
null, which can happen when the named flow does not have attached regions.

Source/WebCore:

Tests: fast/regions/positioned-vrl-in-named-flow.html
       fast/regions/positioned-vrl-in-parent-named-flow.html
       fast/regions/positioned-with-vrl-parent-in-named-flow.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::containingBlockLogicalWidthForPositioned):
(WebCore::RenderBox::computePositionedLogicalWidth):
(WebCore::RenderBox::computePositionedLogicalHeight):

LayoutTests:

* fast/regions/positioned-vrl-in-named-flow-expected.txt: Added.
* fast/regions/positioned-vrl-in-named-flow.html: Added.
* fast/regions/positioned-vrl-in-parent-named-flow-expected.txt: Added.
* fast/regions/positioned-vrl-in-parent-named-flow.html: Added.
* fast/regions/positioned-with-vrl-parent-in-named-flow-expected.txt: Added.
* fast/regions/positioned-with-vrl-parent-in-named-flow.html: Added.


Canonical link: https://commits.webkit.org/109669@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123211 268f45cc-cd09-0410-ab3c-d52691b4dbfc